--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
     </main>
 
     <div class="carrito" id="carrito">
-        <p>Carrito de compras</p>
-        <div class="cardsCa" id="cardsCa">          
-        
+        <span class="material-symbols-outlined" id="close" onclick="cerrarCarrito()">
+            close
+        </span>
+        <p>Carrito de compras</p>     
+        <div class="cardsCa" id="cardsCa">
+
         </div>
         <div class="total">
             <div class="precio">
