--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <p>AlcoholSoft <img id="logo" src="images/logo.png"></p>
         <div class="login">
-            <a href="iniciarSesion.html" id="linkLogin"><button id="botonLogin">Login</button></a>
+            <a href="#" id="linkLogin"><button id="botonLogin">Login</button></a>
         </div>
     </header>
 	<div class="topCarrus">
@@ -200,7 +200,7 @@
     <hr id="line">
     <p id="pModal">Debe iniciar sesión antes de realizar la compra.</p>
     <div class="login2">
-            <a href="iniciarSesion.html" id="linkLogin2"><button id="botonLogin2">Login</button></a>
+            <a href="#" id="linkLogin2"><button id="botonLogin2">Login</button></a>
     </div>
   </div>
 
